Do not use deprecated property attribute wxPG_ATTR_INLINE_HELP (fixes #11605)

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@63093 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775